--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -1,3 +1,8 @@
+.active-container-wrapper {
+  margin: 20px auto;
+  padding: 20px;  
+}
+
 .cards-container {
   display: flex;
   justify-content: center;
