- created new APIs - contexts created to handle auth - Created components for re-using in different pages

--- a/src/components/Dashboard/ActiveContainer/active-container.module.css
+++ b/src/components/Dashboard/ActiveContainer/active-container.module.css
@@ -1,4 +1,10 @@
 .active-container {
   border: 1px solid #ddd;
-  padding: 30px;
+  padding: 0;
+}
+
+@media screen and (min-width: 992px) {
+  .active-container {
+    padding: 30px;
+  }
 }
