--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   transition: all 0.5s linear;
 }
 
+.d-none {
+  display: none;
+}
+
 .text-center {
   text-align: center;
 }
@@ -68,6 +72,7 @@
 
 .table-responsive {
   max-width: 100%;
+  overflow: auto;
 }
 
 .table-head {
@@ -78,6 +83,10 @@
 .table-cell {
   min-width: 100px;
   padding: 10px;
+}
+
+tr.clickable {
+  cursor: pointer;
 }
 
 tr.clickable:hover,
