--- a/src/components/Header/UserOptions/UserOptions.module.css
+++ b/src/components/Header/UserOptions/UserOptions.module.css
@@ -1,10 +1,11 @@
 .user-options {
-  padding: 10px;
+  display: none;
 }
 
 .user {
   text-align: right;
   position: relative;
+  padding: 10px;
 }
 
 .user:hover .sub-menu{
@@ -12,16 +13,22 @@
 }
 
 .sub-menu {
+  box-shadow: 0px 4px 3px 0px #ccc;
   display: none;
-  position: absolute;
-  top: 20px;
-  box-shadow: 0 0 5px;
-  width: 75%;
   padding: 10px;
-  text-align: center;
+  position: absolute;
   right: 0;
+  text-align: center;
+  top: 39px;
+  width: 75%;
 }
 
 .logout-btn {
   width: 100%;
+}
+
+@media screen and (min-width: 992px) {
+  .user-options {
+    display: block;
+  }
 }
