--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -1,10 +1,16 @@
 .active-container-wrapper {
   margin: 20px auto;
-  padding: 20px;  
+  padding: 0;  
 }
 
 .cards-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+}
+
+@media screen and (min-width: 992px) {
+  .active-container-wrapper {
+    padding: 20px;
+  }
 }
