--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -18,6 +18,7 @@
 
 .m-wrapper {
   display: block;
+  padding-right: 20px;
 }
 
 @media screen and (min-width: 992px) {
@@ -34,11 +35,13 @@
     padding-right: 30px;
     width: 20%;
     padding-top: 5px;
+    display: block;
   }
 
   .navbar-container {
     width: 60%;
     padding-top: 5px;
+    display: block;
   }
 
   .m-wrapper {
